# sleepy

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  readme.md  s_build_debug.sh  s_build_release.sh
lib/core/: CMakeLists.txt
lib/core/include/sleepy/: common.hpp  instruction_impl.hpp  instruction_map.hpp  interrupt_addr.hpp  memory.hpp  opcode.hpp  registers.hpp  special_registers.hpp  system.hpp  tile_map_reader.hpp  vcpu.hpp  vcpu_firmware.hpp  vcpu_impl.hpp  vcpu_instruction.hpp
lib/core/src/: instruction_impl.cpp  instruction_map.cpp  memory.cpp  opcode.cpp  registers.cpp  system.cpp  tile_map_reader.cpp  vcpu.cpp  vcpu_firmware.cpp  vcpu_impl.cpp
test/: CMakeLists.txt
test/core/: CMakeLists.txt
test/core/src/: cpufirmware_adc_a_v8.cpp  cpufirmware_add_a_v8.cpp  cpufirmware_add_hl_v16.cpp  cpufirmware_and_a_v8.cpp  cpufirmware_bitrotations.cpp  cpufirmware_call.cpp  cpufirmware_cp_r8.cpp  cpufirmware_dec_r16.cpp  cpufirmware_dec_r8.cpp  cpufirmware_ei_di.cpp  cpufirmware_inc_r16.cpp  cpufirmware_inc_r8.cpp  cpufirmware_jumps.cpp  cpufirmware_ld_a_rptr.cpp  cpufirmware_ld_misc.cpp  cpufirmware_ld_phl_r8.cpp  cpufirmware_ld_r16_d16.cpp  cpufirmware_ld_r8_d8.cpp  cpufirmware_ld_r8_v8.cpp  cpufirmware_ld_rptr_a.cpp  cpufirmware_misc.cpp  cpufirmware_or_a_v8.cpp  cpufirmware_pop_r16.cpp  cpufirmware_push_r16.cpp  cpufirmware_ret.cpp  cpufirmware_rl.cpp  cpufirmware_rlc.cpp  cpufirmware_rr.cpp  cpufirmware_rrc.cpp  cpufirmware_rst.cpp  cpufirmware_sbc_a_v8.cpp  cpufirmware_sub_a_v8.cpp  cpufirmware_xor_a_v8.cpp  cpufw_test_init.hpp  main.cpp  memorytests.cpp  registerstests.cpp
test/core/src/opcodes/extended/: cpufirmware.sra.cpp  cpufirmware.srl.cpp  cpufirmware_bit.cpp  cpufirmware_res.cpp  cpufirmware_rl.cpp  cpufirmware_rlc.cpp  cpufirmware_rr.cpp  cpufirmware_rrc.cpp  cpufirmware_sla.cpp  cpufirmware_swap.cpp
test/core/src/opcodes/standard/: cpufirmware_adc_a_v8.cpp  cpufirmware_add_a_v8.cpp  cpufirmware_add_hl_v16.cpp  cpufirmware_and_a_v8.cpp  cpufirmware_bitrotations.cpp  cpufirmware_call.cpp  cpufirmware_cp_r8.cpp  cpufirmware_dec_r16.cpp  cpufirmware_dec_r8.cpp  cpufirmware_ei_di.cpp  cpufirmware_inc_r16.cpp  cpufirmware_inc_r8.cpp  cpufirmware_jumps.cpp  cpufirmware_ld_a_rptr.cpp  cpufirmware_ld_misc.cpp  (+14 more)
test/src/: cpufirmware_adc_a_v8.cpp  cpufirmware_add_a_v8.cpp  cpufirmware_add_hl_v16.cpp  cpufirmware_and_a_v8.cpp  cpufirmware_bitrotations.cpp  cpufirmware_cp_r8.cpp  cpufirmware_dec_r16.cpp  cpufirmware_dec_r8.cpp  cpufirmware_ei_di.cpp  cpufirmware_inc_r16.cpp  cpufirmware_inc_r8.cpp  cpufirmware_ld_a_rptr.cpp  cpufirmware_ld_misc.cpp  cpufirmware_ld_phl_r8.cpp  cpufirmware_ld_r16_d16.cpp  cpufirmware_ld_r8_d8.cpp  cpufirmware_ld_r8_v8.cpp  cpufirmware_ld_rptr_a.cpp  cpufirmware_misc.cpp  cpufirmware_or_a_v8.cpp  cpufirmware_rst.cpp  cpufirmware_sbc_a_v8.cpp  cpufirmware_sub_a_v8.cpp  cpufirmware_xor_a_v8.cpp  memorytests.cpp  test_macros.hpp
(+5 files in other folders)
